fix stretching table

--- a/src/app.css
+++ b/src/app.css
@@ -237,7 +237,7 @@ body {
 
 .mapping-and-details-container {
     display: grid;
-    /* Left colum mapping list, right colum details.
+    align-items: start;    /* Left colum mapping list, right colum details.
     Grid is overkill here, because each column has just one <div>, but it should be easy to refactor that. */
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
